Modificar api-customer.yml

--- a/config-data/api-customer.yml
+++ b/config-data/api-customer.yml
@@ -1,2 +1,31 @@
 server:
   port: 0
+
+
+server:
+  port: ${PORT:0}
+
+spring:
+  application:
+    name: api-customer
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info, health
+
+  info:
+    env:
+      enabled: true
+
+info:
+  app:
+    name: api-customer
+    description: API Customer del proyecto Billetera Virtual
+    version: 1.0.0
